Add clients endpoints. Client pages layout
