# server/docs/swagger.yaml
@@ -1,10 +1,54 @@
 basePath: /api
 definitions:
-  controllers.Auth:
+  controllers.CreateAndUpdateClientRequest:
+    properties:
+      name:
+        type: string
+      phone:
+        type: string
+    required:
+    - name
+    type: object
+  controllers.CreateAndUpdateProductRequest:
+    properties:
+      active:
+        type: boolean
+      amount_available:
+        type: integer
+      code:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      price_promotion:
+        type: number
+      promotion:
+        type: boolean
+    required:
+    - code
+    - name
+    type: object
+  controllers.LoginRequest:
     properties:
       email:
         type: string
       password:
+        type: string
+    type: object
+  models.Client:
+    properties:
+      created_at:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      phone:
+        type: string
+      updated_at:
         type: string
     type: object
   models.Payment:
@@ -62,18 +106,165 @@ info:
   title: API documentation
   version: 1.0.0
 paths:
+  /clients:
+    get:
+      description: Get all clients
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/models.Client'
+            type: array
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: List clients
+      tags:
+      - Clients
+    post:
+      consumes:
+      - application/json
+      description: Create new Client based on body parameters
+      parameters:
+      - description: Client Data
+        in: body
+        name: Client
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.CreateAndUpdateClientRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      summary: Add a client
+      tags:
+      - Clients
+  /clients/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete an existing client by ID
+      parameters:
+      - description: Client ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      summary: Delete a client
+      tags:
+      - Clients
+    get:
+      description: Get client by ID
+      parameters:
+      - description: Client ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Client'
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            type: object
+      summary: Get client
+      tags:
+      - Clients
+    patch:
+      consumes:
+      - application/json
+      description: Update an existing client based on ID and body parameters
+      parameters:
+      - description: Client ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Client Data
+        in: body
+        name: Client
+        required: true
+        schema:
+          $ref: '#/definitions/controllers.CreateAndUpdateClientRequest'
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            type: object
+        "401":
+          description: Unauthorized
+          schema:
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            type: object
+      summary: Update a client
+      tags:
+      - Clients
   /login:
     post:
       consumes:
       - application/json
       description: Login
       parameters:
-      - description: Auth Data
+      - description: Login Data
         in: body
-        name: Auth
+        name: login
         required: true
         schema:
-          $ref: '#/definitions/controllers.Auth'
+          $ref: '#/definitions/controllers.LoginRequest'
       responses:
         "200":
           description: OK
@@ -169,7 +360,7 @@ paths:
         name: Product
         required: true
         schema:
-          $ref: '#/definitions/models.Product'
+          $ref: '#/definitions/controllers.CreateAndUpdateProductRequest'
       responses:
         "200":
           description: OK
@@ -264,7 +455,7 @@ paths:
         name: Product
         required: true
         schema:
-          $ref: '#/definitions/models.Product'
+          $ref: '#/definitions/controllers.CreateAndUpdateProductRequest'
       responses:
         "200":
           description: OK
